[package]
name = "enumber"
version = "0.3.1-alpha.0"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"

description = "Provide useful impls on numerical enums"
documentation = "https://docs.rs/enumber/"
repository = "https://github.com/kinnison/enumber/"
license = "BSD-3-Clause"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[lib]
proc-macro = true

[dependencies]
syn = {version = "1", features=["full"]}
quote = "1"
